Attempt to fix keyboard pushing content on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,10 @@
   box-sizing : border-box;
 }
 
+html,body{
+  min-height: 100%;
+}
+
 body {
   display: flex;
   justify-content: center;
